<resources>
    <string name="app_name">Green Paradise</string>
    <string name="title_home">User</string>
    <string name="title_dashboard">Buyer</string>
    <string name="title_notifications">Partner</string>
    <string name="title_activity_partner">Be Our Partner</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_services">What services you can provide</string>
    <string name="prompt_exchanges">What you want as exchange interests</string>
    <string name="prompt_phone">phone</string>
    <string name="prompt_type">what type you need</string>
    <string name="prompt_amount">Amount</string>
    <string name="order">order</string>
    <string name="join">join</string>
    <string name="prompt_password">Password </string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_up_short">Sign up</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_buyer">Buyer</string>
    <string name="title_activity_signup">Sign up</string>
    <string name="title_activity_maps">Trash bins locations</string>
    <string name="points">Points</string>
    <string name="add_points">add points</string>
    <string name="replace">Replace</string>
    <string name="about_us">about us</string>
    <string name="support">Support</string>
    <string name="_180">180</string>
</resources>
